v small mobile nav spacing fix

--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -495,6 +495,7 @@ html {
             top: 100%;
             left: 0;
             z-index: -1;
+            margin-left: -1em;
             transform: scaleY(0);
             transform-origin: top;
             transition:
